@@ -1,0 +1,9 @@
+# $NetBSD: Makefile,v 1.1 2008/12/11 11:18:35 roy Exp $
+
+PROG=	tabs
+DPADD=	${LIBTERMCAP}
+LDADD=	-ltermcap
+
+WARNS?=	4
+
+.include <bsd.prog.mk>
